@@ -1,6 +1,13 @@
 
 scriptsdir = $(datadir)/irssi/scripts
 
-scripts_DATA = hello.py dumper.py test_window.py fork.py
+scripts_DATA = \
+	beep_beep.py \
+	dccmove.py \
+	df.py \
+	dumper.py \
+	fork.py \
+	hello.py \
+	test_window.py
 
 EXTRA_DIST = $(scripts_DATA)
